--- a/View/AdminView/EditUserPageView.xaml
+++ b/View/AdminView/EditUserPageView.xaml
@@ -14,8 +14,11 @@
     x:DataType="viewmodel:EditUserPageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
-        <VerticalStackLayout Spacing="8">
-            <Grid Margin="16,8,16,0" VerticalOptions="Start">
+        <VerticalStackLayout Spacing="16">
+            <Grid
+                Margin="16,16,16,0"
+                RowSpacing="8"
+                VerticalOptions="Start">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
@@ -34,6 +37,47 @@
                         TextColor="{StaticResource Primary}"
                         VerticalOptions="Center" />
 
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    HorizontalOptions="End"
+                    Spacing="4"
+                    VerticalOptions="Center">
+                    <Button
+                        BackgroundColor="Aquamarine"
+                        Command="{Binding ShowAllAdminCommand}"
+                        FontSize="18">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Shield_person}"
+                                Color="{StaticResource WhiteText}" />
+                        </Button.ImageSource>
+                    </Button>
+                    <Button
+                        BackgroundColor="LightCoral"
+                        Command="{Binding ShowAllDeactivatedCommand}"
+                        FontSize="18">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.No_accounts}"
+                                Color="{StaticResource WhiteText}" />
+                        </Button.ImageSource>
+                    </Button>
+                    <Button
+                        BackgroundColor="LightGreen"
+                        Command="{Binding ShowAllCommand}"
+                        FontSize="18">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Groups}"
+                                Color="{StaticResource WhiteText}" />
+                        </Button.ImageSource>
+                    </Button>
                 </HorizontalStackLayout>
 
                 <material:TextField
