--- a/View/AdminView/EditPage/EditCurrentFoodRecipePageView.xaml
+++ b/View/AdminView/EditPage/EditCurrentFoodRecipePageView.xaml
@@ -93,6 +93,18 @@
                         </material:TextField.Icon>
                     </material:TextField>
                     <material:TextField
+                        Title="Health Benefit"
+                        AllowClear="True"
+                        BorderColor="{StaticResource PrimaryDarkText}"
+                        CornerRadius="16"
+                        FontSize="16"
+                        Text="{Binding HealthBenefits}"
+                        TextColor="{StaticResource PrimaryDarkText}">
+                        <material:TextField.Icon>
+                            <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Health_and_safety}" />
+                        </material:TextField.Icon>
+                    </material:TextField>
+                    <material:TextField
                         Title="Cooking Time"
                         AllowClear="True"
                         BorderColor="{StaticResource PrimaryDarkText}"
